All Styles done

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>C-Reminders</title>
+    <link rel="shortcut icon" href="../src/assets/img/calendaricon.ico" />
+    <title>Reminder Calendar</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
